# toyoments

./: Cargo.toml  README.md  clippy.toml
.cargo/: config.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  doc.yml
src/: account.rs  clients_accounts.rs  csv_report.rs  engine.rs  engine_tests.rs  main.rs  models.rs  payment_engine.rs  payment_engine_tests.rs  report.rs  transaction.rs
src/account/: client_account.rs  client_account_ops.rs  ops.rs
src/clients_accounts/: client_account.rs  client_account_ops.rs
src/engine/: core.rs  disputable.rs  disputable_transaction.rs  payment_engine.rs
src/engine/tests/: handle_transaction_tests.rs  payment_engine_tests.rs
src/models/: clients_accounts.rs  csv_models.rs
tests/: main_test.rs  main_tests.rs
tests/fixtures/: main_processes_transactions_as_expected.csv  main_processes_transactions_with_errors_as_expected.csv  main_processes_transactions_without_errors_as_expected.csv
tests/snapshots/: main_test__main_processes_transactions_as_expected.snap  main_test__main_processes_transactions_without_errors_as_expected.snap  main_tests__main_processes_transactions_with_errors_works_as_expected.snap
