[package]
name = "toyments"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = { version = "0.6" }
csv = { version = "1.3" }
rust_decimal = { version = "1.38", features = ["serde-float"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert2 = { version = "0.3" }
pretty_assertions = { version = "1.4" }
rstest = { version = "0.26" }
