[package]
name = "toyments"
version = "0.1.0"
edition = "2024"
description = "Toy payment engine"
license = "LICENSE"                                     # no file equals to all rights reserved
repository = "https://github.com/fusillicode/toyoments"
readme = "README.md"
keywords = ["toyments"]
categories = ["cli"]

[dependencies]
color-eyre = { version = "0.6" }
csv = { version = "1.3" }
rust_decimal = { version = "1.38", features = ["serde-float"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "2.0" }
parse-display = { version = "0.9" }

[dev-dependencies]
assert2 = { version = "0.3" }
insta = { version = "1.43" }
pretty_assertions = { version = "1.4" }
rstest = { version = "0.26" }
